fdo#82512 RTF import: fix position of column break

(cherry picked from commit dcb37dcebcde6188eb58ef7d8d34d08fea4badb8)

Change-Id: Ib0f39c4af7cc32d0f4491f13ea207d90a449a47d
Reviewed-on: https://gerrit.libreoffice.org/12309
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>